kubernetes/elk/2-sensors.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensors
  labels:
    app: sensors
    deployment: sensors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensors
  template:
    metadata:
      labels:
        app: sensors
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - image: docker.io/siposaron/sensor:0.0.2
          name: electrica-sensor
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 291Mi
        - image: docker.io/siposaron/sensor:0.0.2
          name: eon-sensor
          imagePullPolicy: Always
          ports:
            - containerPort: 8081    
          resources:
            limits:
              memory: 291Mi
