kubernetes/elk/0-logstash.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: logstash
spec:
    replicas: 1
    selector:
      matchLabels:
        app: logstash
    template:
      metadata:
        labels:
          app: logstash
      spec:
        containers:
          - image: logstash:7.8.1
            name: logstash
            ports:
              - containerPort: 5044
                name: filebeat
              - containerPort: 9600
                name: logstash
              - containerPort: 5000
                name: logstash-tcp
            volumeMounts:
            - name: config-volume
              mountPath: /usr/share/logstash/config
            - name: logstash-pipeline-volume
              mountPath: /usr/share/logstash/pipeline
        volumes:
        - name: config-volume
          configMap:
            name: logstash-config
            items:
              - key: logstash.yml
                path: logstash.yml
        - name: logstash-pipeline-volume
          configMap:
            name: logstash-config
            items:
              - key: logstash.conf
                path: logstash.conf
---
kind: Service
apiVersion: v1
metadata:
    name: logstash
spec:
    # type: ClusterIP
    type: NodePort
    selector:
      app: logstash
    ports:
    - protocol: TCP
      port: 5044
      targetPort: 5044
      name: filebeat
    - protocol: TCP
      port: 9600
      targetPort: 9600
      name: logstash
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31500
      name: logstash-tcp
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: logstash-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
spec:
    rules:
    - host: logstash.k8s.codespring.ro
      http:
        paths:
        - path: /
          backend:
            serviceName: logstash
            servicePort: 5000
        # - path: /
        #   backend:
        #     serviceName: logstash
        #     servicePort: 5044
---
